tests/baselines/reference/typeParameterArgumentEquivalence.errors.txt
tests/cases/compiler/typeParameterArgumentEquivalence.ts(4,5): error TS2322: Type '(item: T) => 真假' is not assignable to type '(item: 数字) => 真假'.
  Types of parameters 'item' and 'item' are incompatible.
    Type '数字' is not assignable to type 'T'.
tests/cases/compiler/typeParameterArgumentEquivalence.ts(5,5): error TS2322: Type '(item: 数字) => 真假' is not assignable to type '(item: T) => 真假'.
  Types of parameters 'item' and 'item' are incompatible.
    Type 'T' is not assignable to type '数字'.


==== tests/cases/compiler/typeParameterArgumentEquivalence.ts (2 errors) ====
    function foo<T>() {
        var x: (item: number) => boolean;
        var y: (item: T) => boolean;
        x = y;  // Should be an error
        ~
!!! error TS2322: Type '(item: T) => 真假' is not assignable to type '(item: 数字) => 真假'.
!!! error TS2322:   Types of parameters 'item' and 'item' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type 'T'.
        y = x;  // Shound be an error
        ~
!!! error TS2322: Type '(item: 数字) => 真假' is not assignable to type '(item: T) => 真假'.
!!! error TS2322:   Types of parameters 'item' and 'item' are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type '数字'.
    }
    